LOVE MY DEAR COUSIN. WAITING FOR MARRIAGE...MUST MARRY HIM AS SOON AS POSSIBLE~~

--- a/et6.tex
+++ b/et6.tex
@@ -1,4 +1,4 @@
-% Created 2024-04-17 Wed 21:27
+% Created 2024-04-23 Tue 16:19
 \documentclass[9pt, b5paper]{article}
 \usepackage{xeCJK}
 \usepackage[T1]{fontenc}
@@ -84,10 +84,27 @@
 \item \textbf{【客户端】"Assets/Bundles/Config" 资源包目录下的"Config.unity3d" 资源包} ：去框架里找：这个资源包，怎么配置，生成资源包、中转热更新资源包服务器、下载到客户端的？
 \item \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
 \item \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
+\item \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
+\item \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
+\end{itemize}
+
+\section{ActorLocation 实例号相关：网搜的 \textbf{【ActorLocation InstanceId 相关的10 点解释】} ：每条每个细节都看懂}
+\label{sec-6}
+\begin{itemize}
+\item 因为InstanceId是变化的，对象的Entity.Id是不变的，所以我们首先可以想到使用Entity.Id来发送actor消息。【pass】
+\item 提供一个位置进程(Location Server)， \textbf{Actor对象可以将自己的Entity.Id跟InstanceId作为kv存到位置进程中} 。发送Actor消息前先去位置进程查询到Actor对象的InstanceId再发送actor消息。 \textbf{【玩家登录时，上报注册位置服，其当前进程的实例号】}
+\item Actor对象在一个进程创建时或者迁移到一个新的进程时，都需要把自己的Id跟InstanceId注册到Location Server上去。【这点儿，就是 \textbf{框架里，唯一1 处 player 登录后 .AddLocation() 的原理。因为不管是一个进程创建，还是玩家纤至新进程，玩家都需要进程里登录，登录时便会注册上报位置服其玩家实例号} 】
+\item 因为Actor对象是可以迁移的，消息发过去有可能Actor已经迁移到其它进程上去了，所以发送Actor Location消息需要提供一种可靠机制
+\item ActorLocationSender提供两种方法，Send跟Call，Send一个消息也需要接受者返回一个消息，只有收到返回消息才会发送下一个消息。
+\item Actor对象如果迁移走了，这时会返回Actor不存在的错误，发送者收到这个错误会等待1秒，然后重新去获取Actor的InstanceId，然后重新发送，目前会尝试5次，5次过后，抛出异常，报告错误
+\item ActorLocationSender发送消息不会每次都去查询Location Server，因为对象迁移毕竟比较少见，只有第一次去查询，之后缓存InstanceId，以后发送失败再重新查询。
+\item Actor对象在迁移过程中，有可能其它进程发送过来消息，这时会发生错误，所以location server提供了一种Lock的机制。对象在传送前，删掉在本进程的信息，然后在location server上加上锁，一旦锁上后，其它的对该key的请求会进行队列。
+\item 传送前因为对方删除了本进程的actor，所以其它进程会发送失败，这时候他们会进行重试。重试的时候会重新请求location server，这时候会发现被锁了，于是一直等待
+\item 传送完成后，要unlock location server上的锁，并且更新新的地址，然后响应其它的location请求。其它发给这个actor的请求继续进行下去。
 \end{itemize}
 
 \section{现在进行时、进展}
-\label{sec-6}
+\label{sec-7}
 \begin{itemize}
 \item \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
 \item \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
@@ -117,6 +134,36 @@
 \item 【4/15】：上午，读2 小时源码。看看，今天头痛——如妈妈生前最后一场、夺命感冒般，左太阳穴痛的亲爱的表哥的活宝妹，2 天来，哪怕下午傍晚、早上来学校，天气还算暖和的时候，也因被冻得直流鼻水！被亲爱的表哥的活宝妹住处的、破烂猪皮肥肉、千斤器嚣鼎、万斤秤砣之流的死肥猪、猪八戒、贱鸡、贱畜牲、极端奸佞太监 gay 杀人猪、故意、恶意、整夜整夜大开 living-room 玻璃门燥音干扰亲爱的表哥的活宝妹的休息，与恶意夜间低温冻首当其冲的亲爱的表哥的活宝妹的房间，贱恶杀人，想要把亲爱的表哥的活宝妹肾脏衰竭冻出人命！它真贱，即刻滚去死、出门就被雷劈死！！
 \item \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
 \item 前几天、停了 \textbf{三天完全不动，三天不动，亲爱的表哥的活宝妹，就死掉一半，感觉真恐怖！} 昨天晚上、连续第二天的高强度跳绳运动后，血液总算最终能够流通到、亲爱的表哥的活宝妹的十个手指尖、赶走那些疯涨的菌类！所以亲爱的表哥的活宝妹不能不动、任何时候每天都要动一动！ \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
+\item 亲爱的表哥的活宝妹，最近发现，最近血量不足，有时候狠多时候头昏、今天中午发现原来是低血糖；亲爱的表哥的活宝妹，最近发现，晚上跳绳后、倒立约10 分钟后、当血液能够流通到头顶后，亲爱的表哥的活宝妹，反而是晚上能够稍微学习一会儿，而显得白天上午、中午下午、晚上倒立血液流通到头顶之前，像是不知道在干什么。。。今天晚上读两小时源码，找不懂的地方。
+\item 上午一两个小时，对照网络上的解释，去进一步理解，亲爱的表哥的活宝妹，自己读源码的过程中，没能站在框架的高度、系统理解的，相关组件的注册等细节，捡零碎框架封装、设计细节。希望亲爱的表哥的活宝妹的脑子里，也能建立起应用、服务器 architecture 相关的设计概念理念。 \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
+\begin{itemize}
+\item 先去找：进程启动起来的时候，具备收发邮件功能的 actor, 什么时候，怎么、哪里、自已曾经主动注册过进程位置信息？【狠容易就找到，弄明白了】
+\end{itemize}
+\item \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
+\item \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
+\item Actor对象在 \textbf{【一个进程创建【TODO】：这个需要改天再找一下】} 时或者【迁移到一个新的进程，这个那天简单看过，逻辑狠简单，用回调，迁前迁后等回调】时，都需要把自己的Id跟InstanceId注册到Location Server上去
+\item \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
+\item 亲爱的表哥的活宝妹， \textbf{下午解决这个上午没能完成的任务：框架里，有哪些，向【位置服】注册上报，实例号与进程位置的封装} 把网搜出的 10 个注释点，每个都看懂
+\item 1.先再过一遍：【服务端，或双端？】启动时，ExcelExporter 导出 .cs 文件的过程 
+\begin{itemize}
+\item ExcelExporter 里，生成【跨进程】公认的四大配制类 .cs, 各种跨进程partial-class 部分类之类的，这一堆细节，还没有看懂
+\item \textbf{【AppType.ExcelExporter 专用进程】} ：根据Unity/Assets/Config/Excel 下的 .xlsx配置文件，生成了 \textbf{各种【跨进程】公认、部分公认的四大配制 .cs 类定义} ；生成了 \textbf{Unity 同级Config/Excel/ 下的 .bytes 配置文件} 成为【客户端】读取获得【服务端】配置的源头？
+\item 现在，去弄明白，框架启动时，【AppType.ExcelExporter 专用进程】这个进程启动的先后顺序？它是个 \textbf{工具进程，一键生成配置文件} 应该不涉及双端的启动过程
+\item 这个帮助工具进程模块，先放一下，下午要把今天这个，亲爱的表哥的活宝妹读不懂的一行源码，问题解决掉。
+\item 创建自定义场景的基本步骤
+\begin{itemize}
+\item 在SceneType枚举中添加自定义名称
+\item 在SceneFactory中添加自定义场景类型所应该处理的相关逻辑
+\item 在Excel配置表中添加自定义场景信息，并生成相应cs文件
+\end{itemize}
+\item 现，换思路， \textbf{【自顶向下】去找注册逻辑的，场景相关} ：
+\begin{itemize}
+\item 亲爱的表哥的活宝妹，把场景加载前后的各种回调等都找了一遍，也没找到。再翻一会儿，找点儿思路。再不行就网搜一下、别人的解释
+\end{itemize}
+\item Location 位置服相关的：所有注册、上报实例号、进程的框架用例
+\end{itemize}
+
+\item 再， \textbf{事件机制【Config】标签} ，亲爱的表哥的活宝妹，总感觉有个【跨进程消息传递】自底向上汇总各小服的过程？不一定想对了。这个放最后再看
 \item \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
 \item \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
 \item \textbf{【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】}
