LOVE MY DEAR COUSIN. WAITING FOR MARRIAGE...MUST MARRY HIM AS SOON AS POSSIBLE~~

--- a/et6.org
+++ b/et6.org
@@ -95,9 +95,24 @@
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
-- RouterComponent ＋ HttpCompnent: 看了大半懂，仍需要再挖掘一遍，狠多底层的细节知识点，不懂。
+- RouterComponent ＋ HttpCompnent: 看了大半懂，仍需要再挖掘一遍，狠多底层的细节知识点，不懂。 *【今天上午再快速看一遍，看能够捡起多少的知识点。这2 个模块，对亲爱的表哥的活宝妹来说，比较难一点儿，上午晚点儿再看，先去把客户端的启动快速复习一遍看透彻！】*. 下面，一个来自ET 框架的开发者自己的解释与截图：下面四条，也是学渣的问题，不一定对
+  - 1.Client http请求拿到 Router 和 Realm 的ip 和端口
+  - 2.Client 和路由建立连接 。
+  - 3.Client 去路由kcp连接，路由把连接信息转发到Realm , Realm 收到连接请求通知路由，路由通知客户端。间接的使Client 和 Realm 建立连接。到这儿后面路由就不在起作用了。
+  - 然后路由的作用就是转发 帮助Client 连接到Realm 或 Gate. 那如果攻击的话肯定是登录进入游戏抓包，还是能攻击到Realm 或Gate。
+- 你对 Router 的理解有点问题,
+- 整个过程应该是: Client -> Router -> Realm/Gate
+- Client 不会直连 Realm/Gate ,不然 Router就失去意义了.
+- 从客户端连接的视角, 可以先看下 LoginHelper 和 RouterHelper 的逻辑是怎么样实现的
+- Gate网关是用来做负载均衡的(分担正常业务流量);
+- 软路由是用来防 黑客攻击的(DDOS),遇到攻击直接切换软路由的外网ip即可,切换ip之后不影响正常业务
+  
+[[./pic/et6_20240425_091702.png]]
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - 再， *事件机制【Config】标签* ，亲爱的表哥的活宝妹，总感觉有个【跨进程消息传递】自底向上汇总各小服的过程？不一定想对了。这个放最后再看
 - *【双端启动相关、四大类型配置、数据跨进程？传递】* ：昨天下午，大致又看了一下 *【服务端】的启动配置过程；可是【客户端】是如何拿到【服务端】各种服的配置的？虽然四大配制类型双端公认，但数据是如何传递的？* 亲爱的表哥的活宝妹，下午要把这个彻底弄明白了
+- 亲爱的表哥的活宝妹，昨天晚上吃错、亲爱的表哥的活宝妹的住处也极为寒凉【极度怀疑，贱恶杀人猪又发疯犯贱过、故意冻过住处】，亲爱的表哥的活宝妹，昨天晚上冻得狠久才入睡；今天轻微感冒症状；昨天晚上没能休息好、休息够的亲爱的表哥的活宝妹，今天状态就欠缺狠多，连发个消息也常常发错，漏掉或是顺序不对什么的。。
+- 晚上没能怎么看，就爬几个题目，今天晚上就早点儿回住处：餐具洗干净、洗头发、衣服折好，早点儿休息11 点前若能入睡睡着，是最养护肝肾脏的！！
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】* 
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
